--- a/is_production/production/doctype/monthly_production_areas/monthly_production_areas.json
+++ b/is_production/production/doctype/monthly_production_areas/monthly_production_areas.json
@@ -3,15 +3,16 @@
  "allow_rename": 1,
  "creation": "2025-04-14 12:44:25.460668",
  "doctype": "DocType",
- "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
   "mining_areas"
  ],
  "fields": [
   {
+   "columns": 2,
    "fieldname": "mining_areas",
    "fieldtype": "Data",
+   "in_list_view": 1,
    "label": "Mining Areas"
   }
  ],
@@ -19,7 +20,7 @@
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2025-04-14 12:46:04.837577",
+ "modified": "2025-04-23 14:12:30.970350",
  "modified_by": "Administrator",
  "module": "Production",
  "name": "Monthly Production-Areas",
