new file:   is_production/production/doctype/define_monthly_production/__init__.py 	new file:   is_production/production/doctype/define_monthly_production/define_monthly_production.js 	new file:   is_production/production/doctype/define_monthly_production/define_monthly_production.json 	new file:   is_production/production/doctype/define_monthly_production/define_monthly_production.py 	new file:   is_production/production/doctype/define_monthly_production/test_define_monthly_production.py 	new file:   is_production/production/doctype/mpp_child/__init__.py 	new file:   is_production/production/doctype/mpp_child/mpp_child.json 	new file:   is_production/production/doctype/mpp_child/mpp_child.py 	modified:   is_production/production/print_format/production_shift_summary/production_shift_summary.json 	new file:   is_production/production/report/ceo_dashboard_one/__init__.py 	new file:   is_production/production/report/ceo_dashboard_one/ceo_dashboard_one.js 	new file:   is_production/production/report/ceo_dashboard_one/ceo_dashboard_one.json 	new file:   is_production/production/report/ceo_dashboard_one/ceo_dashboard_one.py 	new file:   is_production/production/report/ceo_dashboard_one_graphs/__init__.py 	new file:   is_production/production/report/ceo_dashboard_one_graphs/ceo_dashboard_one_graphs.js 	new file:   is_production/production/report/ceo_dashboard_one_graphs/ceo_dashboard_one_graphs.json 	new file:   is_production/production/report/ceo_dashboard_one_graphs/ceo_dashboard_one_graphs.py 	new file:   is_production/production/report/ceo_dashboard_two/__init__.py 	new file:   is_production/production/report/ceo_dashboard_two/ceo_dashboard_two.js 	new file:   is_production/production/report/ceo_dashboard_two/ceo_dashboard_two.json 	new file:   is_production/production/report/ceo_dashboard_two/ceo_dashboard_two.py 	new file:   is_production/production/report/ceo_dashboard_two_graphs/__init__.py 	new file:   is_production/production/report/ceo_dashboard_two_graphs/ceo_

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+.eggs/
+dist/
+build/
+
+# Node / frontend
+node_modules/
+*.map
+
+# Frappe / Bench
+*.log
+logs/
+pids/
+sites/*/private/
+sites/*/public/files/
+sites/*/public/build/
+sites/*/private/backups/
+sites/*/locks/
+sites/*/nginx.conf
+sites/*/redis_cache.conf
+sites/*/redis_queue.conf
+sites/*/redis_socketio.conf
+
+# Env / local
+.env
+.venv
+venv/
+.idea/
+.vscode/
 .DS_Store
-*.pyc
-*.egg-info
-*.swp
-tags
-node_modules
-__pycache__
