--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,13 @@ name = "is_production"
 authors = [
     { name = "Isambane Mining (Pty) Ltd", email = "eben@isambane.co.za"}
 ]
+version = "16.0.0"
 description = "Isambane Mining Frappe App for Production Records"
 requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 dependencies = [
-    # "frappe~=15.0.0" # Installed and managed by bench.
+    # "frappe~=16.0.0" # Installed and managed by bench.
 ]
 
 [build-system]
