--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ version = "16.0.0"
 description = "Isambane Mining Frappe App for Production Records"
 requires-python = ">=3.10"
 readme = "README.md"
-dynamic = ["version"]
+#dynamic = ["version"]
 dependencies = [
     # "frappe~=16.0.0" # Installed and managed by bench.
 ]
