--- a/is_production/geo_planning/doctype/geo_project/geo_project.json
+++ b/is_production/geo_planning/doctype/geo_project/geo_project.json
@@ -55,7 +55,7 @@
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2026-02-14 15:12:35.053932",
+ "modified": "2026-02-23 05:31:55.708206",
  "modified_by": "Administrator",
  "module": "Geo Planning",
  "name": "Geo Project",
@@ -71,6 +71,28 @@
    "read": 1,
    "report": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Production Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Production User",
    "share": 1,
    "write": 1
   }
